Fixed Album to fix thumbnail scrollbar on Windows

--- a/css/style_album.css
+++ b/css/style_album.css
@@ -224,10 +224,12 @@ body.menu #map-canvas {
 #thumbnails #thumbnails-list {
 	position: absolute;
 	left: 0;
-	top: 0;
-	padding: 65px 0 65px 0;
+	top: 50px;
+	padding: 10px 0 10px 0;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 100px);
+	height: -moz-calc(100% - 100px);
+	height: -webkit-calc(100% - 100px);
 	overflow: hidden;
 	overflow-y: scroll; }
 
@@ -486,7 +488,9 @@ body.map #navigator #navigator-select #navigator-map #map-open {
 		display: none; }
 
 	#thumbnails #thumbnails-list {
+		top: 0;
 		padding: 0 10px 0 10px;
+		height: 100%;
 		overflow-y: hidden;
 		overflow-x: scroll; }
 
